<resources>
    <string name="app_name">InventoryApps</string>
    <string name="image">image</string>
    <string name="recover_pass">Forgot Your Password ? <b>Recover</b></string>
    <string name="inventory_apps">Inventory Apps</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="inventory">Inventory</string>
    <string name="product_out">Product Out</string>
    <string name="settings">Settings</string>
    <string name="product_in">Product In</string>
    <string name="manage_product">Manage Product</string>
    <string name="apps">Apps</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="add_product">Add Product</string>
    <string name="variant_optional">Variant (Optional)</string>
    <string name="add_variant">Add Variant</string>
    <string name="save_product">Save Product</string>
    <string name="product_name">Product Name</string>
    <string name="default_price">Default Price</string>
    <string name="variant_product">Variant Product</string>
    <string name="stock_0">Stock : 0</string>
    <string name="product_in_0">Product In : 0</string>
    <string name="product_out_0">Product Out : 0</string>
    <string name="in_product">In Product</string>
    <string name="out_product">Out Product</string>
    <string name="unit">Unit</string>
    <string name="sub_category">Sub Category</string>
    <string name="product">Product</string>
    <string name="product_variant">Product Variant</string>
    <string name="variant">Variant</string>
    <string name="add_product_variant">Add Product Variant</string>
    <string name="price_variant">Price Variant</string>
    <string name="stock_variant">Stock Variant</string>
    <string name="create_variant_product">Create Variant Product</string>
    <string name="name_product">Name Product</string>
    <string name="price_default">Rp 100.000</string>
    <string name="colors">Colors</string>
    <string name="information">Information</string>
    <string name="custom_information">Custom Information.</string>
    <string name="okay">Okay</string>
    <string name="edit_variant_product">Edit Variant Product</string>
    <string name="name_variant">Name Variant</string>
    <string name="edit">Edit</string>
    <string name="filter_product">Filter Product</string>
    <string name="category">Category</string>
    <string name="this_category_not_yet_sub_category">This category not yet sub category.</string>
    <string name="sub_category_optional">Sub Category (Optional)</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="todo">TODO</string>
    <string name="product_settings">Product Settings</string>
    <string name="detail_product">Detail Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="manage_variant">Manage Variant</string>
    <string name="manage_product_variant">Manage Product Variant</string>
    <string name="price">Price</string>
    <string name="rp_170_000">Rp. 170.000</string>
    <string name="stock">Stock</string>
    <string name="_10">10</string>
</resources>