<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true" />

    </group>

    <item
        android:id="@+id/inventory"
        android:title="@string/inventory">

        <menu>

            <group
                android:id="@+id/group2"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/manage_product"
                    android:icon="@drawable/ic_inventory"
                    android:title="@string/manage_product"/>

                <item
                    android:id="@+id/product_in"
                    android:icon="@drawable/ic_product_in"
                    android:title="@string/product_in"/>

                <item
                    android:id="@+id/product_out"
                    android:icon="@drawable/ic_product_out"
                    android:title="@string/product_out"/>

                <item
                    android:id="@+id/category"
                    android:icon="@drawable/ic_category"
                    android:title="@string/category" />

            </group>

        </menu>

    </item>

        <item
            android:id="@+id/apps"
            android:title="@string/apps">

            <menu>
                <group
                    android:id="@+id/group3"
                    android:checkableBehavior="single">

                    <item
                        android:id="@+id/about"
                        android:icon="@drawable/ic_about"
                        android:title="@string/about" />

                    <item
                        android:id="@+id/share"
                        android:icon="@drawable/ic_share"
                        android:title="@string/share" />

                    <item
                        android:id="@+id/settings"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/settings" />

                    <item
                        android:id="@+id/logout"
                        android:icon="@drawable/ic_logout"
                        android:title="@string/logout" />

                </group>

            </menu>

        </item>

</menu>