<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingStart="4dp"
    android:paddingEnd="4dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_settings"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_product"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:padding="16dp"
        android:textColor="@color/primary_dark"
        app:drawableStartCompat="@drawable/ic_detail_product"
        app:drawableTint="@color/primary_dark"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/edit_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_product"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:padding="16dp"
        android:textColor="@color/primary_dark"
        app:drawableStartCompat="@drawable/ic_edit"
        app:drawableTint="@color/primary_dark"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/delete_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_product"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:padding="16dp"
        android:textColor="@color/primary_dark"
        app:drawableStartCompat="@drawable/ic_delete"
        app:drawableTint="@color/primary_dark"
        android:drawablePadding="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/primary_dark"/>

    <TextView
        android:id="@+id/manage_variant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_variant"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:padding="16dp"
        android:textColor="@color/primary_dark"
        app:drawableStartCompat="@drawable/ic_all_variant"
        app:drawableTint="@color/primary_dark"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/add_variant_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_product_variant"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:padding="16dp"
        android:textColor="@color/primary_dark"
        app:drawableStartCompat="@drawable/ic_add_variant_product"
        app:drawableTint="@color/primary_dark"
        android:drawablePadding="8dp"/>


</LinearLayout>

