<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_product"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:includeFontPadding="false"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_product_filter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/category">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_category_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_warning_sub_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_category_not_yet_sub_category"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/warning"
        android:textSize="12.5sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sub_category_product_filter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/sub_category_optional"
        android:visibility="gone">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_sub_category_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/filter_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/filter"
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textAllCaps="false"
        android:textSize="12.5sp"
        android:backgroundTint="@color/primary_dark"/>

    <Button
        android:id="@+id/reset_filter_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/reset"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textAllCaps="false"
        android:textSize="12.5sp"
        android:backgroundTint="@color/primary_dark"/>

</LinearLayout>