<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="190dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_centerInParent="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_product_variant"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_default_image"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="10sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        tools:ignore="SmallSp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/price_product_variant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_170_000"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="10sp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        tools:ignore="SmallSp"
                        android:layout_weight="1"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stock"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="10sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        tools:ignore="SmallSp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/stock_product_variant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_10"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="10sp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        tools:ignore="SmallSp"
                        android:layout_weight="1"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>


