<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="1dp">

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_default_image"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/text_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_product"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                android:textSize="12.5sp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_default"
                android:textSize="12sp"
                android:textColor="@color/primary_dark"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>





