<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_product_variant"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/ic_default_image"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_edit_product_variant"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:cardCornerRadius="3dp"
                    android:layout_margin="2dp"
                    app:cardElevation="2dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_edit"
                        android:layout_gravity="center"
                        app:tint="@color/primary_dark"
                        android:contentDescription="@string/todo" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/price_product_variant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price_default"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="11sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_delete_product_variant"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:cardCornerRadius="3dp"
                    android:layout_margin="2dp"
                    app:cardElevation="2dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_delete"
                        android:layout_gravity="center"
                        app:tint="@color/primary_dark"
                        android:contentDescription="@string/image" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>